2008-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.3.2 released.
	* NEWS.txt: Updated news for release.

2008-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ConvolveImage): Don't process opacity channel
	unless image has one.
	* magick/effect.c (MotionBlurImage): Use
	AcquireOnePixelByReference() rather than AcquireImagePixels() to
	retrieve one pixel.  This is much more efficient.
	(AdaptiveThresholdImage): Don't process opacity channel unless
	image has one.
	(BlurImage): Don't process opacity channel unless image has one.

2008-11-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (ProfileImage): +profile now supports a simple
	exclusion syntax.  For example, to strip all of the profiles
	except for the ICM profile use +profile '!icm,*'.  The new syntax
	also allows multiple profile names to be listed at once.  The
	primary requirement is that all excluded profiles must be listed
	prior to those to be stripped.

2008-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/transform.c (RollImage): Remove image storage class
	alteration.
	(CompositeImageRegion): Ensure that the canvas image storage class
	is correct.

2008-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/delegates.mgk.in: Since we removed support for 'spawn' a
	long time ago, and no longer execute using the Unix shell by
	default, we need to add an ampersand to the end of the two entries
	previously using 'spawn' so that the display program does not hang
	when it invokes the external program.
	* coders/preview.c (WritePreviewImage): Solarize requires a
	threshold argument.
	* coders/vid.c (WriteVIDImage): Eliminate memory leak.
	* magick/montage.c (MontageImages): Fix continued use of freed
	memory.

2008-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c (BuildChannelHistograms): EnhanceImage() and