@@ -1,3 +1,15 @@
+2008-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/utility.c (ExpandFilenames): Remove some arbitrary
+	argument length limits.  Pass -convolve argument without any
+	additional checking.  Verify that strings are not truncated during
+	copy.
+	(ListFiles): Be more memory efficient.
+	* magick/fx.c (ConvolveImage): Fix formatting problem when logging
+	the convolution kernel used.
+	* magick/utility.c (TranslateTextEx): Support formatting huge
+	comment text.
+
 2008-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* version.sh: GraphicsMagick 1.3.2 released.
